@startuml
skin rose
hide empty method
left to right direction
set separator none
title "Tragamonedas Classes - Fixed"

package cl.ucn.disc.ads.tragamonedas {
    package model {
        class Rueda <<domain>> {
            - {static} RANDOM: java.util.Random
            - {static} MAX_VALUE: int = 10
            - valor: int
            + Rueda()
            + girarAlAzar(): void
            + getValor(): int
            + getChar(): char
        }

        class Box <<domain>> {
            - NUMERO_RUEDAS: int = 3
            - ruedas: List<Rueda>
            + Box()
            + girarRuedas(): void
            + getRuedasValues(): List<Character>
            + getRuedas(): List<Rueda>
        }
    }

    package services {
        interface Tragamonedas {
            + realizarApuesta(apuesta: int): int
            + getRuedasValues(): List<Character>
            + getSaldo(): int
        }

        class TragamonedasImpl {
            - box: Box
            - saldo: int
            + TragamonedasImpl(saldo: int)
            + realizarApuesta(apuesta: int): int
            - getPremio(apuesta: int): int
            - isValorRuedasIgualesDistintoDeCero(): boolean
            + getRuedasValues(): List<Character>
            + getSaldo(): int
        }
    }
    class TheMain {
            + main(args: String[]): void
    }
}

Box *--> "3" Rueda : tiene
TragamonedasImpl o--> "1" Box : tiene
TragamonedasImpl ..|> Tragamonedas : <<implements>>
TheMain ..> TragamonedasImpl : usa
@enduml